Переработка плагина, убраны deprecated и трейсы, если api недоступен